<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--tools:context=".UpisIstrazivanje"-->

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/odabirGodina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"></Spinner>
        <Spinner
            android:id="@+id/odabirIstrazivanja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"></Spinner>
        <Spinner
            android:id="@+id/odabirGrupa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"></Spinner>
        <Button
            android:id="@+id/dodajIstrazivanjeDugme"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:text="Upiši me"></Button>
    </LinearLayout>

  <!--  <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></TextView>
-->

</androidx.constraintlayout.widget.ConstraintLayout>