<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/poruka">

    <TextView
        android:id="@+id/tvPoruka"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Uspješno ste upisani u grupu Grupa1
        istraživanja Istraživanje 1"
        android:textSize="40dp"
        android:gravity="center"></TextView>

</FrameLayout>